--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Portfolio-Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -17,8 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Fuggles&family=Indie+Flower&family=Permanent+Marker&family=Nunito:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="../src/index.css">
     <!--
@@ -30,33 +29,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Anthony Lopez's Dev Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <script>
       document.addEventListener('DOMContentLoaded', () => {
 
       // Get all "navbar-burger" elements
-      const $navbarBurgers = document.querySelector('.navbar-burger');
+      const $navbarBurgers = document.querySelector('.sc-hKMtZM iDNpMM');
 
         // Add a click event on each of them
         $navbarBurgers.addEventListener('click', () => {
 
           // Get the target from the "data-target" attribute
           const target = $navbarBurgers.dataset.target;
-          const $target = document.querySelector(".navbar-menu");
+          const $target = document.querySelector(".sc-eCYdqJ hpTohF");
 
           // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
           $navbarBurgers.classList.toggle('is-active');
